# nidhugg

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  Dockerfile  Dockerfile.debug  LLVMLICENSE.TXT  Makefile.am  README  configure.ac
.github/workflows/: ci.yaml  codespell.yml  cpplint.yml
benchmarks/: gen_table.py  mylibrary.py  runall.sh
benchmarks/SV-COMP/: dekker.c  fibonacci.c  gcd.c  indexer.c  lamport.c  pthread_demo.c  queue_ok.c  sigma.c  stack_true.c  szymanski.c
benchmarks/SWSC_experiment/: summary.txt
benchmarks/assert_effect/: README
benchmarks/assert_effect/benchmarks/: gen_table.py  result-table.txt  runall.sh
benchmarks/assert_effect/benchmarks_no_assert/: mylibrary.py  result-table.txt
benchmarks/from_CONCUERROR/: lastzero.c
benchmarks/from_DCDPOR/: parker.c  parker_c11.c
benchmarks/from_OBSERVERS/: fib_bench.c  floating_read.c  lamport.c  lastwrite.c
benchmarks/from_RCMC/: ainc.c  binc.c  casrot.c  casw.c
benchmarks/from_RFSC/results/: Makefile  benchmarks.mk  tabulate.sh
benchmarks/from_SCTBench/: circular_buffer.c  reorder_c11_bad.c  reorder_c11_good.c
benchmarks/from_TRACER/: CO-2+2W.c  CO-MP.c  CO-R.c  CO-S.c  CoRR2.c  alpha1.c  alpha2.c  bakery.c  burns.c  co1.c  co10.c  co4.c  control_flow.c  dijkstra.c  exponential_bug.c  fib_one_variable.c  filesystem.c  myexample.c  n_writers_a_reader.c  n_writes_a_read_two_threads.c  peterson.c  pgsql.c  redundant_co.c
benchmarks/observer-swsc/: README  gen_table.py  runall.sh
benchmarks/observer-swsc/from_DCDPOR/: opt_lock.c
benchmarks/observer-swsc/from_OBSERVERS/: floating_read.c
benchmarks/observer-swsc/from_RCMC/: casw.c
benchmarks/observer-swsc/from_TRACER/: CO-MP.c  CO-R.c  CO-S.c  CoRR2.c  alpha1.c  alpha2.c  co1.c  co4.c  control_flow.c  exponential_bug.c  myexample.c  n_writers_a_reader.c  n_writes_a_read_two_threads.c  redundant_co.c
benchmarks/observer-swsc/synthetic/: race_parametric.c  sat-example.c
benchmarks/other/: approxds_append.c
benchmarks/results/: .gitignore  Makefile  benchmarks.mk  results.txt  tabulate.sh
benchmarks/synthetic/: length_parametric.c  race_parametric.c  race_parametric_assert.c  sat-example.c  thread_parametric.c
ci/: Dockerfile.debug_test22  Dockerfile.test16  Dockerfile.test18  Dockerfile.test20  Dockerfile.test22  install_deps.sh
doc/: Makefile.am  manual.tex
m4/: ax_clang.m4  ax_cxx_compile_stdcxx_11.m4  ax_git_commit.m4  ax_llvm.m4
src/: ARM_test.cpp  ARM_test2.cpp  AddLibPass.cpp  AddLibPass.h  AnyCallInst.h  AssumeAwaitPass.cpp  AssumeAwaitPass.h  AwaitCond.cpp  AwaitCond.h  BVClock.cpp  BVClock.h  CPid.cpp  CPid.h  CPid_test.cpp  CastElimPass.cpp  CastElimPass.h  CheckModule.cpp  CheckModule.h  CompilerHelp.h  Configuration.cpp  Configuration.h  Cpubind.cpp  Cpubind.h  DPORDriver.cpp  DPORDriver.h  DPORDriver_test.cpp  DPORDriver_test.h  DPORInterpreter.h  DeadCodeElimPass.cpp  DeadCodeElimPass.h  Debug.cpp  Debug.h  DetCheckTraceBuilder.cpp  DetCheckTraceBuilder.h  DryRun_test.cpp  DummyTB.cpp  DummyTB.h  Execution.cpp  ExternalFunctions.cpp  FBVClock.cpp  (+116 more)
tests/: ARM_test.cpp  CPid_test.cpp  DPORDriver_test.h  Makefile.am  POWER_test.cpp  RMW_test.cpp  VClock_CPid_test.cpp  VClock_int_test.cpp  nregex_test.cpp
tests/litmus/: generate-reference.py  listfile.txt  nidhugg.results.txt  reference.results.txt  test-nidhugg.py  test-swsc.py
tests/litmus/C-litmus/: 2+2W+eieio+lwsync.c  2+2W+eieio+sync.c  2+2W+eieios.c  2+2W+isync+po.c  2+2W+lwsync+isync.c  2+2W+lwsyncs.c  2+2W+sync+isync.c  2+2W+sync+lwsync.c  2+2W+sync+po.c  2+2W+sync+rfi-data.c  2+2W.c  2+2W0001.c  2+2W0002.c  2+2W0003.c  2+2W0004.c  2+2W0008.c  2+2W0009.c  2+2W0010.c  2+2W0011.c  2+2W0012.c  2+2W0015.c  2+2W0016.c  2+2W0017.c  2+2W0018.c  2+2W0019.c  2+2W0020.c  2+2W0023.c  2+2W0025.c  2+2W0026.c  2+2W0027.c  2+2W0028.c  2+2W0032.c  2+2W0035.c  2+2W0036.c  2+2W0037.c  2+2W0038.c  2+2W0039.c  2+2W0042.c  2+2W0043.c  2+2W0045.c  (+4070 more)
tests/litmus/C-tests/: 2+2W+eieio+isync.c  2+2W+eieio+lwsync.c  2+2W+eieio+po.c  2+2W+eieio+sync.c  2+2W+isyncs.c  2+2W+lwsync+isync.c  2+2W+lwsync+po.c  2+2W+lwsync+rfi-data.c  2+2W+lwsync+sync.c  2+2W+rfi-addrs.c  2+2W+rfi-datas.c  2+2W+sync+lwsync.c  2+2W+sync+po.c  2+2W+sync+rfi-data.c  2+2W+syncs.c  2+2W.c  2+2W0000.c  2+2W0001.c  2+2W0002.c  2+2W0003.c  2+2W0004.c  2+2W0005.c  2+2W0006.c  2+2W0007.c  2+2W0008.c  2+2W0009.c  2+2W0010.c  2+2W0011.c  2+2W0012.c  2+2W0013.c  2+2W0014.c  2+2W0015.c  2+2W0016.c  2+2W0017.c  2+2W0018.c  2+2W0019.c  2+2W0020.c  2+2W0021.c  2+2W0022.c  2+2W0023.c  (+7732 more)
tests/smallbutchallenging/: generate-reference.py  listfile.txt  nidhugg.results.txt  reference.results.txt  test-nidhugg.py  test-swsc.py
tests/smallbutchallenging/C-tests/: fib_one_variable_1.c  fib_one_variable_2.c  lastzero_2.c  mutex_deadlock_one.c  mutex_order.inc  mutex_order_2.c  mutex_trylock_deadlock.c  n_writers_a_reader_1.c  n_writers_a_reader_2.c  n_writers_a_reader_3.c  n_writers_a_reader_4.c  n_writes_a_read_two_threads_4.c  opt_lock_2.c  parker.inc  parker_2.c  readers_2.c  redundant_co_2.c  redundant_co_3.c  rmw_test2.c  sigma_false.inc
tests/smoke/: .gitignore  listfile.txt  reference.results.txt  test-nidhugg.py
tests/smoke/C-tests/: await_mud_opt.c  await_muddier_opt.c  await_vs_indep_inc.c  await_vs_indep_inc_2.c  await_vs_indep_inc_easy.c  broken_mutual_exclusion_obs.c  broken_mutual_exclusion_opt.c  bug_after_1k.c  bug_after_1k_power.c  bug_after_1k_pso.c  bug_after_1k_rf.c  bug_after_1k_sc.c  cmpxhg_test.inc  cmpxhg_test_3.c  dekker_lock_trylock_opt.c  fib_bench_true_1.c  fib_bench_true_2.c  fib_one_variable_1.c  fib_one_variable_2.c  fib_true_sw_too_few.c  fib_true_sw_too_many.c  fib_true_too_few.c  inlineasm.c  lastzero_1.c  lastzero_2.c  lastzero_3.c  lastzero_4.c  linuxrwlocks_repro.c  linuxrwlocks_repro_ifaa.c  mutex_deadlock.inc  mutex_deadlock_2.c  mutex_deadlock_3.c  mutex_deadlock_one_first.c  mutex_hard.c  mutex_lock_before_init.c  mutex_lock_before_init_first.c  mutex_order_3.c  mutex_racy_destroy.c  mutex_racy_destroy_first.c  mutex_trylock_unlock.c  (+73 more)
travis/: install_deps.sh
(+172 files in other folders)
